--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- Header section -->
 	<header class="header-section">
 		<a href="home.html" class="site-logo">
-			<img src="img/icons/logo.png" alt="" height="64" width="64">
+			<img src="img/icons/logo.png" alt="kartinka" height="64" width="64">
 		</a>
 		<ul class="main-menu">
 			<li><a class="active" href="index.html">Головна</a></li>
